<resources>
    <string name="app_name">Powder Scale Mobile</string>

    <!-- Login -->
    <string name="connection">Connexion</string>
    <string name="login_id">Identifiant</string>
    <string name="login_password">Mot de passe</string>

    <!-- Home Page -->
    <string name="welcome_user">Bienvenue sur l\'interface utilisateur</string>
    <string name="welcome_admin">Bienvenue sur l\'interface administrateur</string>
    <string name="devicesList_title">Liste des appareils</string>
    <string name="continue_to_devices_list">Continuer pour connaitre l\'état des appareils</string>

    <!-- Devices Cart List & Filters -->
    <string name="checkBox_onlineDevices">Appareils en lignes</string>
    <string name="checkBox_withProblemDevices">Appareils avec problèmes</string>
    <string name="desc_filter">Filtre</string>

    <!-- Devices Cart -->
    <string name="last_connection">Dernière mise à jour:</string>
    <string name="default_datetime">--/--/---- --:--:--</string>
    <string name="online">En ligne</string>
    <string name="offline">Hors ligne</string>

    <string name="accelerometer">Accéléromètre</string>
    <string name="weight_sensor">Capteurs de poids</string>

    <string name="status_fonctional">Fonctionnel</string>
    <string name="status_problem">Défaillant</string>
    <string name="status_unknow">\?</string>

    <!--  Materials Status  -->

    <string name="stable">Stable</string>
    <string name="on_move">En mouvement</string>
    <string name="unusable">Inutilisable</string>
    <string name="problem">Défaut</string>
    <string name="unavailable">Indisponible</string>
    <string name="incoherent">Incohérent</string>

    <string name="global_status">Status global :</string>
    <string name="accelerometer_status">Accéléromètre :</string>
    <string name="accelerometerX_status">X :</string>
    <string name="accelerometerY_status">Y :</string>
    <string name="accelerometerZ_status">Z :</string>
    <string name="accelerometerNorm_status">Norm :</string>
    <string name="weightSensor_status">Capteurs de poids :</string>
    <string name="calibration_index">Indice de calibrage :</string>
    <string name="detected_weight">Poids détécté :</string>
    <string name="stoneDisplay_status">Ecran interactif :</string>

    <string name="associated_user_list">Liste des personnes associées:</string>

    <string name="menu_a_z">"Tri alphabétique (A-Z)"</string>
    <string name="menu_z_a">"Tri alphabétique inverse (Z-A)"</string>
    <string name="menu_lastUpdateFirst">"Tri par date (récent)"</string>
    <string name="menu_farUpdateFirst">"Tri par date (ancien)"</string>

    <string name="logout_desc">Déconnexion</string>
    <string name="welcome">"Bienvenue  "</string>
    <string name="new_measurement">Nouvelle mesure</string>
    <string name="machines_status">Statut des machines</string>

</resources>