<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_backgroundHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp">
    <!-- tools:context=".HomeActivity"-->
    <LinearLayout
        android:id="@+id/linearLayout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Titre à gauche -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <!-- Logo à droite -->
        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/logout_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/logout_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_title"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_newMeasurement"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/bleu_gestion_t"
            android:minWidth="200dp"
            android:padding="16dp"
            android:radius="24dp"
            android:text="@string/new_measurement"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_devicesStatus"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/bleu_gestion_t"
            android:minWidth="200dp"
            android:padding="16dp"
            android:radius="24dp"
            android:text="@string/machines_status"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>