<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/rounded_corner_8"
    android:padding="2dp">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- En-tête avec nom de machine et statut -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Nom de la machine -->

                <!-- Statut en ligne/hors ligne -->
                <TextView
                    android:id="@+id/tv_machine_name"
                    style="@style/SensorTitle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="200dp"
                    android:maxLines="1"
                    android:text="Nom de la machine" />

                <TextView
                    android:id="@+id/tv_machine_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/none_status"
                    android:paddingStart="12dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="4dp"
                    android:text="@string/offline"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_machineTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_connection"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_machineTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_datetime"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>


            <!-- Détails des composants -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <!-- Accéléromètre -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/accelerometer"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_accelerometer_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/none_status"
                        android:paddingStart="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="4dp"
                        android:text="@string/status_unknow"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Capteur de poids -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weight_sensor"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_weight_sensor_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/none_status"
                        android:paddingStart="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="4dp"
                        android:text="@string/status_unknow"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>