<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:background="@drawable/background_shape"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:background="@drawable/rounded_image"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:src="@mipmap/ic_launcher1_round"/>
        </FrameLayout>

        <EditText
            android:id="@+id/edt_username"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:textColor="@color/bleu_gestion"
            android:textColorHint="@color/bleu_gestion"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_id" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/bleu_gestion"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/bleu_gestion_t"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textSize="16sp"
            android:radius="24dp"
            android:text="@string/connection" />


    </LinearLayout>


</RelativeLayout>